--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 
 		<title>{PROJECT TITLE}</title>
 		<!--- CSS INIT --> 
-		<link rel="stylesheet" href="styles/master.css" />
+		<!--link rel="stylesheet" href="styles/master.css" /-->
+
 		<!--[if lt IE 9]> 
 			<script>
 				
@@ -49,7 +50,7 @@
 			</div>
 		</div>
 		<!--- JS MODULES INIT --> 
-		<script src="js/jquery-1.7.min.js"></script>
-		<script data-main="js/main" src="js/require.js"></script>
+		<script src="js/libs/jquery-1.7.min.js"></script>
+		<script data-main="js/main" src="js/libs/require.js"></script>
 	</body>
 </html>
